Trial in Graph Node
V1

--- a/app/templates/components/index.hbs
+++ b/app/templates/components/index.hbs
@@ -5,9 +5,10 @@
   <script src="//qtip2.com/v/stable/jquery.qtip.js"></script>
   <link href="//qtip2.com/v/stable/jquery.qtip.css" rel="stylesheet" type="text/css"/>
   <style type="text/css">
+  
     #mynetwork {
-      width: 500px;
-      height: 300px;
+      width: 100%;
+      height: 700px;
       border: 1px solid lightgray;
       overflow: scroll;
     }
