Final Relation Manager

--- a/app/templates/components/index.hbs
+++ b/app/templates/components/index.hbs
@@ -1,5 +1,6 @@
 {{yield}}
-
+<button {{action "getgraph"}} >Click</button>
+{{!-- <button {{action "getstore"}} >Store</button> --}}
   <script type="text/javascript" src="https://unpkg.com/vis-network@latest/dist/vis-network.min.js"></script> 
   <link href="https://unpkg.com/vis-network@latest/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
   <script src="//qtip2.com/v/stable/jquery.qtip.js"></script>
