--- a/app/templates/components/index.hbs
+++ b/app/templates/components/index.hbs
@@ -23,7 +23,7 @@
     <button {{action "getgraph"}}>Button</button>
     {{!-- <div style="max-height: 100%;max-width:50%;overflow: auto;"> --}}
 <div id="mynetwork"></div>
-<div id="mynetwork2"></div>
-<p id="p1" {{action "consoleevent"}}>Hello World</p>
- <button {{action "getactiveid"}}>Button</button>
+{{!-- <div id="mynetwork2"></div> --}}
+{{!-- <p id="p1" {{action "consoleevent"}}>Hello World</p>
+ <button {{action "getactiveid"}}>Button</button> --}}
 {{!-- </div> --}} 
