--- a/app/templates/components/index.hbs
+++ b/app/templates/components/index.hbs
@@ -1,6 +1,5 @@
 {{yield}}
-<button {{action "getgraph"}} >Click</button>
-{{!-- <button {{action "getstore"}} >Store</button> --}}
+
   <script type="text/javascript" src="https://unpkg.com/vis-network@latest/dist/vis-network.min.js"></script> 
   <link href="https://unpkg.com/vis-network@latest/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
   <script src="//qtip2.com/v/stable/jquery.qtip.js"></script>
@@ -9,21 +8,32 @@
   
     #mynetwork {
       width: 100%;
-      height: 700px;
+      height: 800px;
       border: 1px solid lightgray;
-      overflow: scroll;
+      {{!-- background-color: #f0f0f0;; --}}
+      background-color: white;;
     }
-    #mynetwork2 {
-      width: 500px;
-      height: 300px;
-      border: 1px solid lightgray;
-    }
-  </style> 
     
-    <button {{action "getgraph"}}>Button</button>
-    {{!-- <div style="max-height: 100%;max-width:50%;overflow: auto;"> --}}
-<div id="mynetwork"></div>
-{{!-- <div id="mynetwork2"></div> --}}
-{{!-- <p id="p1" {{action "consoleevent"}}>Hello World</p>
- <button {{action "getactiveid"}}>Button</button> --}}
-{{!-- </div> --}} 
+  </style> 
+
+<div class="container">
+    <div class="mask">
+      <button {{action "getgraph"}} >Load Graph</button>
+    </div>
+      <div id="mynetwork"></div>
+</div>
+<style>
+
+
+.mask
+{
+    position: relative;
+    float: left;
+    clear: none;
+    right: -3px;
+    top: -3px;
+    background-color: white;
+    width: 7%;
+    height: 100%;
+}
+</style>
